--- a/web/html/index.liquid
+++ b/web/html/index.liquid
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>wasmcloud Playground</title>
-</head>
-<body>
-	<h1>Todos</h1>
-	<ul>
-		{% for todo in todos %}
-			<li>{{ todo.id }} {{ todo.title }} {{ todo.completed }}</li>
-		{% endfor %}
-	</ul>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>wasmcloud Playground</title>
+		<link rel="stylesheet" href="styles/index.css">
+		<script src="scripts/index.js" type="module"></script>
+	</head>
+	<body>
+		<section class="todoapp">
+			<header class="header">
+				<h1>todos</h1>
+				<input class="new-todo" placeholder="What needs to be done?" autofocus>
+			</header>
+			<section class="main">
+				<ul class="todo-list">
+					{% for todo in todos %}
+					<li data-id="{{ todo.id }}"{% if todo.completed %} class="completed"{% endif %}>
+						<div class="view">
+							<input class="toggle" type="checkbox"{% if todo.completed %} checked disabled{% endif %}>
+							<label>{{ todo.title }}</label>
+						</div>
+					</li>
+					{% endfor %}
+				</ul>
+				<footer class="footer">
+					<span class="todo-count">{{ todos.size }} item{% if todos.size != 1 %}s{% endif %} left</span>
+				</footer>
+			</section>
+		</section>
+	</body>
 </html>
